@@ -5,10 +5,10 @@ import rockwell.application.model.CategoryWithNumbers;
 import rockwell.application.model.MappedDivisor;
 import rockwell.application.model.NumbersWithDivisorsMapped;
 import rockwell.application.model.categorymapper.CategoryMapperFactory;
+import rockwell.application.model.categorymapper.ICategoryMapper;
 import rockwell.application.util.DivisorsUtil;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class MappingService implements IMapping{
@@ -23,7 +23,7 @@ public class MappingService implements IMapping{
             List<Integer> allDivisors=DivisorsUtil.getAllDivsors(nr);
             List<String>  mappedDivisors=allDivisors.stream()
                     .map( divisor->categoryMapper.getMap().get(divisor))
-                    .collect(Collectors.toList());
+                    .toList();
             MappedDivisor map = new MappedDivisor(nr,mappedDivisors);
             numbersWithDivisorsMapped.addMap(map);
         });
